<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_desktop_mode"
        android:title="@string/desktop_mode"
        android:orderInCategory="3"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_proxy"
        android:title="@string/proxy_settings"
        android:orderInCategory="5"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_recording"
        android:title="@string/start_recording"
        android:orderInCategory="10"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_log"
        android:title="@string/view_request_log"
        android:orderInCategory="15"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_extract_cookies"
        android:title="@string/extract_cookies"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_cookies"
        android:title="@string/clear_cookies"
        android:orderInCategory="60"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_profile"
        android:title="@string/add_profile"
        android:orderInCategory="200"
        app:showAsAction="never" />

</menu>
